@@ -1,3 +1,4 @@
+2017-03-23 v1.0.7 compatibility for PrestaShop version 1.6.1.12
 2017-01-30 v1.0.6 compatibility for PrestaShop version 1.6.1.2 and 1.6.1.3
 2017-01-23 v1.0.5 compatibility for PrestaShop version 1.6.1.4
 2017-01-17 v1.0.4 - PrestaShop version 1.6.1.11
